[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/player.png" type="Texture" id=1]
[ext_resource path="res://actors/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48, 48 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 56, 40 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 16 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 15
script = ExtResource( 2 )

[node name="Player" type="Sprite" parent="."]
position = Vector2( 0, -48 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -48 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true

[node name="enemy_detecter" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_detecter"]
modulate = Color( 0, 0, 1, 1 )
position = Vector2( 0, -48 )
shape = SubResource( 2 )

[node name="kill_zone_check" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="kill_zone_check"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0, -48 )
shape = SubResource( 3 )
[connection signal="area_entered" from="enemy_detecter" to="." method="_on_enemy_detecter_area_entered"]
[connection signal="body_entered" from="enemy_detecter" to="." method="_on_enemy_detecter_body_entered"]
[connection signal="area_entered" from="kill_zone_check" to="." method="_on_kill_zone_check_area_entered"]
